snappass-project/argocd-istio-canary/kubectl/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: snappass
  istio-injection: enabled
