snappass-project/argocd-istio-canary/kubectl/rollout-v2.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: snappass-rollout
  namespace: snappass
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: snappass-app
  template:
    metadata:
      labels:
        app: snappass-app
        version: v2.0.0
    spec:
      containers:
        - name: snappass-v2
          image: us.gcr.io/kuber-276115/snappass:v2.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
  strategy:
    canary:
      steps:
        - setWeight: 10
        - pause:
            duration: 10m
      canaryService: snappass-canary-service # required
      stableService: snappass-stable-service # required
      trafficRouting:
        istio:
          virtualService:
            name: snappass-virtual-service # required
            routes:
              - snappass-route # At least one route is required
---
apiVersion: v1
kind: Service
metadata:
  name: snappass-stable-service
  namespace: snappass
spec:
  # type: NodePort
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: snappass-app
---
apiVersion: v1
kind: Service
metadata:
  name: snappass-canary-service
  namespace: snappass
spec:
  # type: NodePort
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: snappass-app
